Java 17 og generell rydding i yml filer + justere minne/cpu bruk