@@ -1,3 +1,2 @@
-FROM navikt/java:15
+FROM navikt/java:17
 COPY target/*.jar app.jar
-ENV JAVA_OPTS --enable-preview
